<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.archu.arsenalfc.activity.StadiumActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewEmirates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/emiratesStadiumBtn"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/es8" />

            <TextView
                android:id="@+id/emiratesStadiumTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emiratesStadiumBtn"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-30dp"
                android:text="@string/emirates_stadium"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emiratesStadiumDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emiratesStadiumTxt"
                android:layout_marginLeft="12dp"
                android:text="@string/emirates_stadium_description"
                android:textColor="@android:color/black"
                android:textSize="13sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewHighbury"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEmirates">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/highburyStadiumBtn"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/hs8" />

            <TextView
                android:id="@+id/highburyStadiumTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/highburyStadiumBtn"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-30dp"
                android:text="@string/highbury_stadium"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/highburyStadiumDescTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/highburyStadiumTxt"
                android:layout_marginLeft="12dp"
                android:text="@string/highbury_stadium_description"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>